Ready v.2.0.0: migrating to Spring Boot 2 and Lettuce 5 redis client
